# portfolio-analyzer

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  TODO.md  V3_UPGRADE_NOTES.md  auto_monitor_v3.py  features.md  instructions.md  main.py  monitor_dashboard.py  pyproject.toml  run_v3.sh
.claude/: settings.json
.claude/agents/: breakout-crosscheck.md  csv-parser.md  ipo-scorer.md  (+17 more)
config/: technical_weights.csv
dashboard/: app.js  index.html  package-lock.json  package.json  style.css
docs/: data-sources.md  indicators.md  scoring.md
input/: sample_zerodha.csv
scripts/: audit_agent_reachability.py  bake_dashboard.py  clean.py  compile_report.py  compute_technicals.py  deep_technical_analysis.py  fetch_all.py  fetch_ohlcv.py  fetch_us_ohlcv.py  holdings_validate.py  parse_csv.py  portfolio_importer.py  portfolio_report_archive.py  portfolio_snapshot.py  render_ipos.py  research_status.py  save_scan.py  scan_and_log.py  score_all.py  score_stock.py  suggestions_log.py  suggestions_report.py  suggestions_resolve.py  technical_all.py  technical_analysis.py  track_performance.py  validate_ipos.py  validate_scan.py  verify_scan.py  watch_and_deploy.py  watch_portfolio.py  watchlist.py  watchlist_events.py  watchlist_report.py  watchlist_snapshot.py
specs/: 00-architecture.md  01-history-and-server.md  02-stock-scanner.md  03-scan-confluence-implementation.md  03-watchlists.md  04-portfolios.md
tests/: test_data.py  test_indicators.py  test_ta_config.py
utils/: __init__.py  config.py  data.py  helpers.py  indicators.py  ta_common.py  ta_config.py
(+17 files in other folders)
