[project]
name = "portfolio-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "pyarrow>=23.0.1",
    "watchdog>=6.0.0",
    "yfinance>=1.2.0",
]
